Fixed page-content overflowing (true)

--- a/src/index.css
+++ b/src/index.css
@@ -135,6 +135,7 @@ body {
     background: #223240;
     height: 120px;
     padding: 0px;
+    margin: 0px;
 }
 #current-weight {
     background: #D9D8D7;
